--- a/client/app/views/templates/main.css
+++ b/client/app/views/templates/main.css
@@ -362,9 +362,19 @@ body{
 
 .choicesContainer .documentBlock .documentContent{
   box-shadow: 0px 0px 8px #999;
-  padding:2px;
+  padding:5px;
+  padding-top:20px; /*Space for tools buttons*/
   background-color: rgba(255,255,255,0.9);
   min-height:124px;
+}
+
+.choicesContainer .documentBlock .documentContent a{
+  color:black;
+  text-decoration: underline;
+}
+
+.choicesContainer .documentBlock .documentContent .documentTitle{
+  padding-left:25px;
 }
 
 .choicesContainer div.removeButton{
@@ -377,6 +387,12 @@ body{
   position: absolute;
   top:0;
   right:54px;
+}
+
+/* For editing mode */
+.choicesContainer p[contenteditable="true"], .choicesContainer span[contenteditable="true"]{
+  border:1px solid rgb(200, 200, 200);
+  padding:3px;
 }
 
 /* Add document part */
@@ -423,6 +439,7 @@ body{
   background: -webkit-radial-gradient(rgba(230,230,230,1), rgba(255,255,255,0));
   min-height:100px;
   height: 100px;
+  padding:2px;
 }
 
 #addButton{
