--- a/client/app/views/templates/choices.jade
+++ b/client/app/views/templates/choices.jade
@@ -21,7 +21,7 @@ div.container
             li
               a(href='#') Mon profil
             li
-              a(href='#portfolio') Vue de mon Portfolio
+              a(href='/public/portfolio' target="_blank") Vue de mon Portfolio
             li.active
               a(href='#choices') Mes choix
             li
