First design of the public portfolio view (not dynamic for now -> static object portfolioData for tests) Added a css file for the public page

--- a/client/app/views/templates/accountSettings.jade
+++ b/client/app/views/templates/accountSettings.jade
@@ -21,7 +21,7 @@ div.container(onload="init()")
             li
               a(href='#') Mon profil
             li
-              a(href='/public/portfolio' target="_blank") Vue de mon Portfolio
+              a(href='/public/portfolio' target="_blank") Voir mon Portfolio
             li
               a(href='#choices') Mes choix
             li.active
