--- a/client/public.css
+++ b/client/public.css
@@ -22,7 +22,22 @@ body{
 }
 
 h1{
+  margin-bottom:5px;
+}
+
+.secondTitle{
+  font-family: Courier New, Courier, monospace;
+  font-weight: 500;
+  color:#3498db;
+  font-size: 15px;
+  font-style: italic;
   margin-bottom:30px;
+}
+
+.secondTitle a{
+  color:#3498db;
+  text-decoration: underline;
+  
 }
 
 .tab{
@@ -163,7 +178,6 @@ input.visibilityCheckBox[type="checkbox"] + label:hover::after, input.visibility
 .documentBlock .documentContent{
   box-shadow: 0px 0px 8px #999;
   padding:5px;
-  padding-top:20px; /*Space for tools buttons*/
   background-color: rgba(255,255,255,0.9);
   min-height:124px;
 }
