Label change for the age on the home page

--- a/client/app/views/templates/home.jade
+++ b/client/app/views/templates/home.jade
@@ -39,7 +39,7 @@ div.container
         input#lastName(type="text", placeholder="Votre nom", name="lastName")
         input#lastNameCB(type="checkbox", name="lastNameCB")
         label(for="lastNameCB")
-        p Date de naissance
+        p Date de naissance (pour votre âge uniquement)
         input#birthdayDate(type="text", placeholder="jj/mm/aaaa", name="birthdayDate")
         input#birthdayDateCB(type="checkbox", name="birthdayDateCB")
         label(for="birthdayDateCB")
