--- a/client/public.css
+++ b/client/public.css
@@ -40,6 +40,20 @@ h1{
   
 }
 
+.presentationTab p{
+  margin-bottom: 0px;
+}
+
+.hobby, .keyword{
+  display:inline-block;
+  padding: 2px 5px;
+  border:1px solid #999;
+  color:#555;
+  border-radius:3px;
+  background-color: rgba(200,200,200,0.3);
+  margin: 2px;
+}
+
 .tab{
   border:1px solid #555;
   margin:0 10px;
