--- a/client/app/views/templates/choices.jade
+++ b/client/app/views/templates/choices.jade
@@ -4,6 +4,7 @@ script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
 link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
 style
   include main.css
+  include choices.css
   
 div.container
   div.col-md-2.leftMenu
