--- a/client/app/views/templates/main.css
+++ b/client/app/views/templates/main.css
@@ -1,4 +1,8 @@
-/* make sidebar nav vertical */ 
+/*************************/
+/**       GLOBAL        **/
+/*************************/
+
+/* Vertical navigation bar with responsive design */ 
 @media (min-width: 768px) {
   .sidebar-nav .navbar .navbar-collapse {
     padding: 0;
@@ -43,14 +47,14 @@
   }
 }
 
-
-/*Global*/
-div.container{
-  width:100%;
+div.leftMenu{
   padding:0;
 }
 
-div.leftMenu{
+
+/*General elements*/
+div.container{
+  width:100%;
   padding:0;
 }
 
@@ -62,424 +66,11 @@ body{
   background-color: #ecf0f1;
 }
 
-/*****************/
-/* Settings View */
-/*****************/
-.settingsContainer div.submitButton{
-  margin-top:30px;
-}
-
-.settingsContainer div.submitButton button{
-  margin-bottom:20px;
-  margin-left:-200px;
-}
-
-.settingsContainer input{
-  width: 250px;
-}
-
-.settingsContainer button#DYBconnection, button#DYBconnected{
-  margin : 20px 0px;
-}
-
-.settingsContainer #DYBconnection{
-  display:block;
-}
-
-.settingsContainer #DYBloadingIcon{
-  position:absolute;
-  margin-top:-35px;
-  margin-left:320px;
-}
-
-/***************/
-/* Profil View */
-/***************/
-.profilContainer input{
-  width: 300px;
-}
-
-.profilContainer div.submitButton{
-  margin-top:30px;
-}
-
-.profilContainer div.submitButton button{
-  margin-bottom:20px;
-}
-
-.profilContainer #DYBSyncing{
-  margin-left:20px;
-}
-
-.profilContainer input[type="checkbox"]{
-  display:inline-block;
-  width:50px;
-  margin-left:30px;
-  vertical-align: top;
-  display:none;
-}
-
-.profilContainer input[type="checkbox"] + label{
-  position:absolute;
-  content:"";
-  width:27px;
-  height:27px;
-  border:3px solid #bbb;
-  background-color: #777;
-  cursor: pointer;
-  box-shadow: 0px 0px 2px #333 inset;
-  transition: all 0.3s ease-out;
-}
-
-.profilContainer input[type="checkbox"]:checked + label{
-  background-color: #27ae60;
-  box-shadow: 0px 0px 5px #333 inset;
-  transition: all 0.3s ease-out;
-}
-
-.profilContainer input[type="checkbox"] + label:hover::after, .profilContainer input[type="checkbox"]:checked + label:hover::after{
-  display: block;
-  position: absolute;
-  padding: .5em;
-  min-width: 120px;
-  text-align: center;
-  width: auto;
-  height: auto;
-  white-space: nowrap;
-  top: -35px;
-  left:10px;
-  background: rgba(0,0,0,.7);
-  -moz-border-radius:5px;
-  -webkit-border-radius:5px;
-  border-radius:5px;
-  color: #fff;
-  font-size: .86em;
-}
-
-.profilContainer input[type="checkbox"] + label:hover::after{
-  content: "Afficher sur mon portfolio";
-}
-
-.profilContainer input[type="checkbox"]:checked + label:hover::after{
-  content: "Enlever de mon portfolio";
-}
-
-.profilContainer #resumesContainer .resume{
-  display:block;
-  width:200px;
-  height:100px;
-  float:left;
-  border:2px solid #777;
-  box-shadow: 0px 0px 0px #555;
-  -moz-border-radius:5px;
-  -webkit-border-radius:5px;
-  border-radius:5px;
-  cursor:pointer;
-  margin:7px;
-  opacity:0.5;
-  transition: all 0.5s ease;
-}
-
-.profilContainer #resumesContainer .resume.choice{
-  border:2px solid #27ae60;
-  box-shadow: 0px 0px 5px #555;
-  opacity:1;
-  transition: all 0.2s ease;
-}
-
-.profilContainer #resumesContainer .resume:hover{
-  box-shadow: 0px 0px 10px #555;
-  opacity:1;
-  transition: all 0.2s ease;
-}
-
-.profilContainer #resumesContainer .resumeTitle{
-  color:#2980b9;
-  font-size: 10pt;
-  width:180px;
-  height:80px;
-  margin:auto;
-  margin-top:8px;
-  text-align: center;
-  padding:3px;
-  border-bottom: 1px solid #2980b9;
-  border-top: 1px solid #2980b9;
-  overflow: scroll;
-}
-.profilContainer #DYBloadingIcon{
-  display: inline-block;
-  margin-left: 20px;
-}
-
-
-/*************************/
-/**    CHOICES VIEW     **/
-/*************************/
-
-.choicesContainer .row{
-  margin-right: 0px;
-  margin-left: 0px;
-}
-
-.choicesContainer h1{
-  margin-bottom:30px;
-}
-
-.choicesContainer .tab{
-  border:1px solid #555;
-  margin:0 10px;
-  position: relative;
-  padding-bottom: 10px;
-  border-radius: 8px 8px 3px 3px;
-  background-color: rgb(44,62,80);
-  max-height: 65px;
-  margin-top:-8px;
-  overflow: hidden;
-  transition:all 0.3s ease;
-}
-
-.choicesContainer .tab.choiceCategory{
-  max-height:500px!important;
-  margin-top:-8px!important;
-  overflow: scroll;
-  box-shadow: 0px 0px 15px black;
-  background-color: rgb(64,82,100);
-}
-
-.choicesContainer .tab:hover{
-  box-shadow: 0px 0px 15px black;
-  max-height:100px;
-  margin-top:-43px;
-  transition:all 0.3s ease;
-}
-
-.choicesContainer #submitPart{
-  margin-top:15px;
-}
-
-.choicesContainer .tabTitle{
-  padding:20px;
-  border-radius: 15px 15px 0px 0px;
-  font-size: 18px;
-  color: #fbfcfc;
-  display:block;
-  clear: both;
-  cursor: pointer;
-}
-
-.choicesContainer .docsContainer{
-  padding:5px;
-  min-height: 100px;
-}
-
-.choicesContainer .badgeBlock{
-  padding:5px;
-  margin-bottom:5px;
-}
-
-.choicesContainer .badgeBlock .badgeContent{
-  box-shadow: 0px 0px 8px #999;
-  padding:2px;
-  background-color: rgba(255,255,255,0.9);
-  min-height:124px;
-}
-
-.choicesContainer img.badgeImage{
-  width:100px;
-  display: inline-block;
-  float:left;
-  height:100px;
-  margin:10px;
-  padding:8px;
-  border-radius: 5px;
-  box-shadow: 0px 0px 5px #333 inset;
-  border:2px solid #bbb;
-  -webkit-filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
-  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
-}
-
-.choicesContainer .badgeBlock .badgeDetails{
-  display: table;
-}
-
-.choicesContainer .badgeDetails span.badgeName{
-  font-weight: 900;
-}
-
-.choicesContainer .badgeDetails p.badgeIssuer{
-  margin-bottom:8px;
-  margin-top: 12px;
-  margin-right: 30px;
-}
-.choicesContainer .badgeDetails p.badgeDescription{
-  margin-top:0px;
-  margin-bottom:0px;
-  font-size: 14px;
-  margin-left:8px;
-  margin-right:5px;
-}
-
-.choicesContainer .badgeDetails .badgeLink{
-  float:right;
-  margin-right:10px;
-  padding:10px;
-}
-
-.choicesContainer .badgeBlock a{
-  color:black;
-  text-decoration: underline;
-}
-
-.choicesContainer input.visibilityCheckBox[type="checkbox"], .choicesContainer input.visibilityCheckBox[type="checkbox"] + label{
-  position: absolute;
-  top :0px;
-  right:0px;
-}
-
-.choicesContainer input.visibilityCheckBox[type="checkbox"] + label:hover::after, .choicesContainer input.visibilityCheckBox[type="checkbox"]:checked + label:hover::after{
-  top: -35px;
-  left:-130px; 
-}
-
-#syncOBbutton{
-  width:320px;
-  clear:both;
-  display: block;
-  margin: 0px auto;
-  margin-bottom:15px;
-  background-color:rgba(126, 206, 234, 0.5);
-}
-
-#syncDYBDocumentsButton{
-  margin:15px;
-}
-
-
-.choicesContainer .documentBlock{
-  padding:5px;
-  margin-bottom:5px;
-}
-
-.choicesContainer .documentBlock .documentContent{
-  box-shadow: 0px 0px 8px #999;
-  padding:5px;
-  padding-top:20px; /*Space for tools buttons*/
-  background-color: rgba(255,255,255,0.9);
-  min-height:124px;
-}
-
-.choicesContainer .documentBlock .documentContent a{
-  color:black;
-  text-decoration: underline;
-}
-
-.choicesContainer .documentBlock .documentContent .documentTitle{
-  padding-left:25px;
-}
-
-.choicesContainer div.removeButton{
-  position: absolute;
-  top:0;
-  right:27px;
-}
-
-.choicesContainer input.editionCheckBox[type="checkbox"] + label{
-  position: absolute;
-  top:0;
-  right:54px;
-}
-
-/* For editing mode */
-.choicesContainer p[contenteditable="true"], .choicesContainer span[contenteditable="true"]{
-  border:1px solid rgb(200, 200, 200);
-  padding:3px;
-}
-
-/* Add document part */
-#addDocumentPart{
-  margin-bottom: 50px;
-}
-
-#addDocumentBlock{
-  border:2px #888 dashed;
-  border-radius:5px;
-}
-
-#addDocumentContent{
-  box-shadow: 0px 0px 5px #999;
-  padding:10px;
-}
-
-#addDocumentPart label{
-  vertical-align: top;
-  width: 40%;
-  margin:10px 0px;
-}
-
-#addDocumentPart input{
-  margin:10px 0px;
-  width:60%;
-}
-
-#addDocumentButton{
- margin-top:10px; 
-}
-
-#placeHolderAddDocumentBlock{
-  border:2px #888 dashed;
-  border-radius:10px;
-  cursor: pointer;
-  opacity: 0.65;
-  transition:opacity 0.2s;
-}
-
-#placeHolderAddDocumentContent{
-  box-shadow: none;
-  background: radial-gradient(rgba(230,230,230,1), rgba(255,255,255,0));
-  background: -webkit-radial-gradient(rgba(230,230,230,1), rgba(255,255,255,0));
-  min-height:100px;
-  height: 100px;
-  padding:2px;
-}
-
-#addButton{
-  border-radius:58px;
-  width:58px;
-  height:58px;
-  display:block;
-  border:4px solid #888;
-  background-color: transparent;
-  color:#888;
-  font-size: 30px;
-  margin:auto;
-  margin-top:19px;
-  transition:all 0.2s;
-}
-
-#cancelButton{
-  margin-top:10px;
-  margin-left: 10px;
-}
-
-#placeHolderAddDocumentBlock:hover{
-  opacity: 1;
-  transition:opacity 0.2s;
-}
-
-#placeHolderAddDocumentBlock:hover #addButton{
-  border-radius:64px;
-  width:64px;
-  height:64px;
-  margin-top:16px;
-  font-size: 34px;
-  transition:all 0.2s;
-}
-
-
 /***********************/
 /**    COMPONENTS     **/
 /***********************/
 
+/*---------------------------*/
 /*Spinner loading icon*/
 .spinner {
   height: 28px;
@@ -494,12 +85,15 @@ body{
   0%    { transform: rotate(0deg); }
   100%  { transform: rotate(360deg); }
 }
+/*---------------------------*/
 
+
+/*---------------------------*/
 /* Button to set visibility */
 /*
   HTML Structure (Jade)
-    input#exemple.visibilityCheckBox(type="checkbox", name="#exemple")
-    label(for="#exemple")
+    input#exempleID.visibilityCheckBox(type="checkbox", name="#exempleID")
+    label(for="#exempleID")
 */
 input.visibilityCheckBox[type="checkbox"]{
   display:none;
@@ -536,6 +130,7 @@ input.visibilityCheckBox[type="checkbox"] + label:hover::after, input.visibility
   padding:0.3em;
 }
 
+/*Explaination popup*/
 input.visibilityCheckBox[type="checkbox"] + label:hover::after{
   content: "Afficher sur mon portfolio";
 }
@@ -543,16 +138,24 @@ input.visibilityCheckBox[type="checkbox"] + label:hover::after{
 input.visibilityCheckBox[type="checkbox"]:checked + label:hover::after{
   content: "Enlever de mon portfolio";
 }
+/*---------------------------*/
 
 
-/*Mandatory star for forms*/
+/*---------------------------*/
+/*Star for mandatory forms elements*/
 span.mandatoryStar{
   vertical-align:super;
   color:#e74c3c;
 }
+/*---------------------------*/
 
 
+/*---------------------------*/
 /* Button to remove a document */
+/*
+  HTML Structure (Jade)
+    div.removeButton(documentID="exempleID" onclick="removeDocument(this)")
+*/
 div.removeButton{
   border:3px solid #bbb;
   width:27px;
@@ -576,8 +179,9 @@ div.removeButton::before, div.removeButton::after {
     left: 0;
     margin-top:-2px;
     background: #bbb;;
-  }
-  
+}
+
+/*cross shape*/  
 div.removeButton::before {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
@@ -587,9 +191,16 @@ div.removeButton::after {
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
 }
+/*---------------------------*/
 
 
-/** Button for edit mode **/
+/*---------------------------*/
+/** Button for editing mode **/
+/*
+  HTML Structure (Jade)
+    input#exempleID.editionCheckBox(type="checkbox", name="exempleID")
+    label(documentID="exempleID" onclick="editDocument(this)")
+*/
 input.editionCheckBox[type="checkbox"]{
   display:none;
 }
@@ -613,6 +224,7 @@ input.editionCheckBox[type="checkbox"]:checked + label{
   transition: all 0.3s ease-out;
 }
 
+/*Label inside the button*/
 input.editionCheckBox[type="checkbox"] + label::after{
   content:"Modifier";
   margin-left:5px;
@@ -622,3 +234,4 @@ input.editionCheckBox[type="checkbox"]:checked + label::after{
   content:"Terminer";
   margin-left:3px;
 }
+/*---------------------------*/
