--- a/client/public.jade
+++ b/client/public.jade
@@ -23,7 +23,7 @@ html
           h1.col-md-12 Portfolio 
             if user.name
               span de #{user.name} 
-          span.col-md-12.text-center.secondTitle gracieusement hébergé par son 
+          span.col-md-12.text-center.secondTitle gracieusement hébergé par mon 
             a(href="https://cozy.io/fr/" target="_blank") Cozy Cloud
         //-if user.age || user.email || user.status || user.localisation || user.description || user.hobbies || user.keywords
           div.row.col-md-12#UserInfos
